<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="HVAC" Id="{9cea35eb-2a16-419a-9e75-5529a246bd08}">
    <Declaration><![CDATA[TYPE HVAC :
STRUCT

	MesSetptTemp		: REAL ;    	 (*(°C)  Temperature setpoint*)

	MesSetptHygro		: REAL ;    	 (*(%)   Hygrometry setpoint      *)

	MesOn				: BOOL ;    	 (*      HVAC is on *)

	MesAlarmCom			: BOOL ;    	 (*      Communication alarm *)

	MesWorkingHr 			: REAL ; 		 (* (s)	 Time AC has been on*)
	MesCP_Read			: BOOL := TRUE; (* 	 Read function enable*)
	MesCP_Write			: BOOL := FALSE; (* 	 Write function enable*)
	
	MesAlarmCode		: WORD ;		 (* 	 AlarmCode for the TGBT*)
	MesWarningCode		: WORD ;		 (* 	 WarningCode for the TGBT*)
	                                     

	
END_STRUCT
END_TYPE














]]></Declaration>
  </DUT>
</TcPlcObject>